4 file upload updated

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -14,6 +14,18 @@
 				<label for="exampleFormControlFile1">Select Daybook CSV file</label>
 				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile1" th:field="*{file}">
 			</div>
+			<div class="form-group">
+				<label for="exampleFormControlFile2">Select AccHead CSV file</label>
+				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile2" th:field="*{file}">
+			</div>
+			<div class="form-group">
+				<label for="exampleFormControlFile3">Select Closebl CSV file</label>
+				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile3" th:field="*{file}">
+			</div>
+			<div class="form-group">
+				<label for="exampleFormControlFile4">Select Schedule CSV file</label>
+				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile4" th:field="*{file}">
+			</div>
 			<button type="submit" class="btn btn-success">Upload</button>
 		</form>
 		</div>
