success and upload page finished

--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -9,22 +9,22 @@
 		<div class="row">
 			<div class="col-lg-4"></div>
 			<div class="col-lg-4">
-		<form th:action="@{/uploaded}" th:object="${csvUploadModel}" method="post">
+		<form th:action="@{/uploaded}" th:object="${csvUploadModel}" enctype="multipart/form-data" method="post">
 			<div class="form-group">
 				<label for="exampleFormControlFile1">Select Daybook CSV file</label>
-				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile1" th:field="*{file}">
+				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile1" th:field="*{file1}">
 			</div>
 			<div class="form-group">
 				<label for="exampleFormControlFile2">Select AccHead CSV file</label>
-				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile2" th:field="*{file}">
+				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile2" th:field="*{file2}">
 			</div>
 			<div class="form-group">
-				<label for="exampleFormControlFile3">Select Closebl CSV file</label>
-				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile3" th:field="*{file}">
+				<label for="exampleFormControlFile3">Select CloseBalance CSV file</label>
+				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile3" th:field="*{file3}">
 			</div>
 			<div class="form-group">
 				<label for="exampleFormControlFile4">Select Schedule CSV file</label>
-				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile4" th:field="*{file}">
+				<input type="file" enctype="multipart/form-data" class="form-control-file" id="exampleFormControlFile4" th:field="*{file4}">
 			</div>
 			<button type="submit" class="btn btn-success">Upload</button>
 		</form>
