--- a/src/main/resources/templates/findBalanceSheet.html
+++ b/src/main/resources/templates/findBalanceSheet.html
@@ -5,63 +5,66 @@
 <body>
 	<div th:replace="fragments::navbar"></div>
 	<div class="container">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xs-7 col-sm-6 col-lg-8">
-					<div>
-						<form th:action="@{/BalanceSheet}" th:object="${balSheetForm}" method="post">
-							<label for="accs">Select an Account:</label> <select th:field="*{accCode}" id="accs"
-								name="accCode" size="26" multiple>
-								<option th:each="accs : ${accsList}"
-                          th:value="${accs.accCode}"
-									th:text="${accs.accName}"> WIREFRAME </option>
-							</select><br>
-							<br> <input type="submit">
-						</form>
-					</div>
+		<div class="row">
+			<form th:action="@{/BalanceSheet}" th:object="${balSheetForm}" method="post">
+				<div class="col-xs-7 col-sm-6 col-lg-7">
+					<fieldset>
+						<legend>Select an Account</legend>
+						<div class="form-group col-xs-8">
+							<select class="form-control" th:field="*{accCode}" id="accs"
+								name="accCode" size="22" multiple>
+								<option th:each="accHead : ${accsList}"
+									th:value="${accHead.accCode}" th:text="${accHead.accName}">
+									WIREFRAME</option>
+							</select>
+						</div>
+					</fieldset>
 				</div>
-				<div class="col-xs-5 col-sm-6 col-lg-4">
+				<div class="col-xs-5 col-sm-6 col-lg-5">
 					<fieldset>
 						<legend style="width: auto;">Select Specifications</legend>
-						<form th:action="@{/BalanceSheet}" th:object="${balSheetForm}" method="post"
-							style="max-width: 600px; margin: 0 auto;">
-							<div class="form-group">
-								<label for="exampleFormControlSelect1">Report Order</label> <select
-									class="form-control" th:field="*{reportOrder}"
-									id="exampleFormControlSelect1">
-									<option value="false" selected>All</option>
-									<option value="true">Group</option>
-								</select>
-							</div>
-							BalanceSheet  as on : <input
-								type="date" th:filed="*{endDate}" name="endDate"
-								min="2000-01-02" max="2022-01-01" value="2019-03-31">
-							<div class="form-group">
-								<label for="exampleFormControlSelect2">Accounts with Zero Balance</label> <select class="form-control"
-									th:field="*{zeroBal}" id="exampleFormControlSelect2">
-									<option value="true">No</option>
-									<option value="false" selected>Yes</option>
-								</select>
-							</div>
-							<div class="form-group">
-								<label for="exampleFormControlSelect3">Select Level</label> <select
-									class="form-control" th:field="*{level}"
-									id="exampleFormControlSelect3">
+						<div class="form-group  col-xs-10">
+							<label for="exampleFormControlSelect1">Report Order</label> <select
+								class="form-control" th:field="*{reportOrder}"
+								id="exampleFormControlSelect1">
+								<option value="false" selected>All</option>
+								<option value="true">Group</option>
+							</select>
+						</div>
+						<div class="form-group  col-xs-10">
+							<label for="inputdefault">BalanceSheet  as on :</label> <input
+								class="input-group date" type="text" th:filed="*{endDate}"
+								name="endDate" min="2000-01-02" max="2022-01-01"
+								value="2019-03-31">
+						</div>
+						<div class="form-group  col-xs-10">
+							<label for="exampleFormControlSelect2">Accounts with Zero Balance</label> <select class="form-control"
+								th:field="*{zeroBal}" id="exampleFormControlSelect2">
+								<option value="false">No</option>
+								<option value="true" selected>Yes</option>
+							</select>
+						</div>
+						<div class="form-group  col-xs-10">
+							<label for="exampleFormControlSelect3">Select Level</label> <select
+								class="form-control" th:field="*{level}"
+								id="exampleFormControlSelect3">
 									<option value="1">1</option>
 									<option value="2">2</option>
 									<option value="3">3</option>
 									<option value="4">4</option>
 									<option value="5">5</option>
 									<option value="6">6</option>
-								</select>
-							</div>
+							</select>
+						</div>
+						<div class="form-group  col-xs-10">
 							<!--  Nice Listing format for Acc Selection -->
-							<button type="submit">Submit</button>
-							<input type="button" value="Close">
-						</form>
+							<button class="btn btn-success" type="submit">Submit</button>
+							<button class="btn btn-danger" type="button" value="Close">Close</button>
+						</div>
+
 					</fieldset>
 				</div>
-			</div>
+			</form>
 		</div>
 	</div>
 </body>
