--- a/src/main/resources/templates/findTradingPL.html
+++ b/src/main/resources/templates/findTradingPL.html
@@ -32,7 +32,7 @@
 							</select>
 						</div>
 						<div class="form-group  col-xs-10">
-							<label for="inputdefault">Trading P&L  as on :</label> <input
+							<label for="inputdefault">Trading P&amp;L  as on :</label> <input
 								class="input-group date" type="text" th:filed="*{endDate}"
 								name="endDate" min="2000-01-02" max="2022-01-01"
 								value="2019-03-31">
