path to excel upload changed in index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
   <div class="zoom"><a th:href="@{/profile}">Profile</a></div>
   <div class="zoom"><a th:href="@{/reports}">Reports</a></div>
   <div class="zoom"><a th:href="@{/upload}">CSV Upload</a></div>
-  <div class="zoom"><a th:href="@{/findTradingPL}">Excel Upload</a></div>
+  <div class="zoom"><a th:href="@{/uploadExcel}">Excel Upload</a></div>
 	</div>
 </body>
 </html>
