selection disable feature fixed

--- a/src/main/resources/templates/findDaybook.html
+++ b/src/main/resources/templates/findDaybook.html
@@ -20,8 +20,8 @@
                 <input type="date" class="form-control" th:filed="*{endDate}" name="endDate" min="2000-01-02" max="2022-01-01" value ="2019-03-31">
         </div> </div>
         <div class="col-sm-offset-2 col-sm-4">
-        <button type="submit" class="btn btn-primary">Submit </button>
-		<button type="button" value="Close" class="btn btn-default">Close</button>
+        <button type="submit" class="btn btn-success">Submit </button>
+		<button type="button" class="btn btn-danger" onclick="window.history.back()" value="Close"	>Close</button>
 	</div>	
     </form>	
 	</div>
