--- a/src/main/resources/templates/findBalanceSheet.html
+++ b/src/main/resources/templates/findBalanceSheet.html
@@ -12,7 +12,7 @@
 						<legend>Select an Account</legend>
 						<div class="form-group col-xs-8">
 							<select class="form-control" th:field="*{accCode}" id="accs"
-								name="accCode" size="22" multiple>
+								name="accCode" size="22" multiple disabled>
 								<option th:each="accHead : ${accsList}"
 									th:value="${accHead.accCode}" th:text="${accHead.accName}">
 									WIREFRAME</option>
@@ -59,7 +59,7 @@
 						<div class="form-group  col-xs-10">
 							<!--  Nice Listing format for Acc Selection -->
 							<button class="btn btn-success" type="submit">Submit</button>
-							<button class="btn btn-danger" type="button" value="Close">Close</button>
+							<button class="btn btn-danger" onclick="window.history.back()" type="button" value="Close">Close</button>
 						</div>
 
 					</fieldset>
@@ -67,5 +67,6 @@
 			</form>
 		</div>
 	</div>
+	<script th:src="@{/script/disableselect.js}"></script>
 </body>
 </html>
