--- a/src/main/resources/templates/ledger.html
+++ b/src/main/resources/templates/ledger.html
@@ -44,7 +44,7 @@
                		 <td th:text = "${ledger.date}">Date</td>
                		 <td style="color:red">Opening Balance</td>
                		 <td style="color:darkgreen" th:text = "${ledger.openingBal}">Opening Balance Value</td>
-               		 <td style="color:darkgreen" th:text= "${ledger.dOrC}">Opening Balance Value</td>
+               		 <td style="color:darkgreen" th:text= "${ledger.dOrC}">Debot or Credit</td>
                		 <td></td>
                		 <td></td>
                		</tr>
