index file changed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,7 @@
 	<h1>Welcome to CrDr</h1>
 	</div>
 	<div class="flex-container">
-  <div class="zoom"><a th:href="@{/profile}">Profile</a></div>
-  <div class="zoom"><a th:href="@{/reports}">Reports</a></div>
-  <div class="zoom"><a th:href="@{/upload}">CSV Upload</a></div>
+  <div class="zoom"><a th:href="@{/login}">Login</a></div>
 	</div>
 </body>
 </html>
