--- a/src/main/resources/templates/year_select.html
+++ b/src/main/resources/templates/year_select.html
@@ -9,16 +9,16 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<form id="formid" th:action="@{/companyselect}"
-				th:object="${yearCriteria}" method="post">
+			<form id="formid" th:action="@{/StoreCompany}"
+				th:object="${companySelectCriteria}" method="post">
 				<div class="col-xs-7 col-sm-6 col-lg-7">
 					<fieldset>
-						<legend>Company</legend>
+						<legend>Year</legend>
 						<div class="form-group col-xs-8">
-							<select class="form-control" id="companies"
-								name="companyName" size="10">
-								<option th:each="company : ${companies}" th:value="${company}"
-									th:text="${company}">WIREFRAME</option>
+							<select class="form-control" id="years"
+								name="cid" size="10">
+								<option th:each="entry : ${years}" th:value="${entry.key}"
+									th:text="${entry.value}">WIREFRAME</option>
 							</select>
 						</div>
 					</fieldset>
