--- a/src/main/resources/templates/findBalanceSheet.html
+++ b/src/main/resources/templates/findBalanceSheet.html
@@ -33,9 +33,14 @@
 						</div>
 						<div class="form-group  col-xs-10">
 							<label for="inputdefault">BalanceSheet  as on :</label> <input
-								class="input-group date" type="text" th:filed="*{endDate}"
+								class="input-group date" type="date" th:filed="*{endDate}"
 								name="endDate" min="2000-01-02" max="2022-01-01"
 								value="2019-03-31">
+						</div>
+						<div class="form-group  col-xs-10">
+							<label for="closingStock">Closing Stock </label> <input
+								class="input-group" type="number" th:field="*{closingStock}"
+								name="closingStock" value=0>
 						</div>
 						<div class="form-group  col-xs-10">
 							<label for="exampleFormControlSelect2">Accounts with Zero Balance</label> <select class="form-control"
@@ -48,12 +53,12 @@
 							<label for="exampleFormControlSelect3">Select Level</label> <select
 								class="form-control" th:field="*{level}"
 								id="exampleFormControlSelect3">
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-									<option value="4">4</option>
-									<option value="5">5</option>
 									<option value="6">6</option>
+									<option value="5">5</option>
+									<option value="4">4</option>
+									<option value="3">3</option>
+									<option value="2">2</option>
+									<option value="1">1</option>
 							</select>
 						</div>
 						<div class="form-group  col-xs-10">
