--- a/src/main/resources/templates/findTrialBal.html
+++ b/src/main/resources/templates/findTrialBal.html
@@ -33,7 +33,7 @@
 						</div>
 						<div class="form-group  col-xs-10">
 							<label for="inputdefault">Trial Balance as on :</label> <input
-								class="input-group date" type="text" th:filed="*{endDate}"
+								class="input-group date" type="date" th:filed="*{endDate}"
 								name="endDate" min="2000-01-02" max="2022-01-01"
 								value="2019-03-31">
 						</div>
