--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -68,3 +68,14 @@ table {
 		display: block;
 	}
 }
+
+#accs option[isHeader='1']
+{
+color:red;
+font-weight:bold;
+}
+
+#accs option[isHeader='0']
+{
+font-weight:bold;
+}
