--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,18 +22,13 @@
 <body>
 	<div th:fragment="navbar">
 		<div class="navbar">
-			<a class="active" href="./"><i class="fa fa-home" aria-hidden="true"></i> HOME</a>
 			<a th:href="@{/reports}"><i class="fa fa-book" aria-hidden="true"></i> REPORTS</a> 
-			<a th:href="@{/upload}"><i class="fa fa-cloud-upload" aria-hidden="true"></i> UPLOAD</a> 
 				<a href="#" th:inline="text" id="nav-username"><i class="fa fa-fw fa-user" aria-hidden="true"> </i> [[${#request.userPrincipal.principal.name}]] </a>
 		</div>
 	</div>
 	
 	<div th:fragment="reports-navbar">
 		<div class="navbar">
-			<a class="active" href="./"><i class="fa fa-home" aria-hidden="true"></i> HOME</a>
-			 <a th:href="@{/login}"><i class="fa fa-sign-in" aria-hidden="true"></i>
-				LOGIN</a>
 			<a th:href="@{/company_selection}"><i class="fa fa-sign-in" aria-hidden="true"></i>
 				CHANGE COMPANY</a>
 			<a th:href="@{/upload}"><i class="fa fa-sign-in" aria-hidden="true"></i>
@@ -50,6 +45,14 @@
 			<a class="active" href="./"><i class="fa fa-home" aria-hidden="true"></i> HOME</a>
 			 <a th:href="@{/login}"><i class="fa fa-sign-in" aria-hidden="true"></i>
 				LOGIN</a>
+		</div>
+	</div>
+	
+	<div th:fragment="cs-navbar">
+		<div class="navbar">
+			<a class="active" href="./"><i class="fa fa-home" aria-hidden="true"></i> HOME</a>
+			 <a th:href="@{/logout}"><i class="fa fa-sign-in" aria-hidden="true"></i>
+				LOGOUT</a>
 		</div>
 	</div>
 	
