--- a/src/main/resources/templates/trialBal.html
+++ b/src/main/resources/templates/trialBal.html
@@ -29,9 +29,9 @@
             </thead>
             <tbody>
                		<tr th:each="trialview: ${listTrailView}">
-               		 <td id="left_align" th:text ="${trialview.accName}">Acc Head Name</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${trialview.debit}">Debit</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${trialview.credit}">Credit</td>
+               		 <td th:text ="${trialview.accName}" th:id="${trialview.level}" th:attrappend="isHeader=${trialview.header}">Acc Head Name</td>
+               		 <td id="right_align" th:text="${trialview.debit}" th:attrappend="isHeader=${trialview.header}">Debit</td>
+               		 <td id="right_align" th:text="${trialview.credit}" th:attrappend="isHeader=${trialview.header}">Credit</td>
                		</tr>
             </tbody>
         </table>
