--- a/src/main/resources/templates/findTradingPL.html
+++ b/src/main/resources/templates/findTradingPL.html
@@ -74,8 +74,8 @@
 						<div class="form-group  col-xs-10">
 							<label for="exampleFormControlSelect2">Accounts with Zero Balance</label> <select class="form-control"
 								th:field="*{zeroBal}" id="exampleFormControlSelect2">
-								<option value="false">No</option>
-								<option value="true" selected>Yes</option>
+								<option value="false">Yes</option>
+								<option value="true">No</option>
 							</select>
 						</div>
 						<div class="form-group  col-xs-10" id="select_level" style="display:none">
