--- a/src/main/resources/templates/tradingPL.html
+++ b/src/main/resources/templates/tradingPL.html
@@ -29,9 +29,9 @@
             </thead>
             <tbody>
                		<tr th:each="tradingPL: ${listTradingPL}">
-               		 <td id="left_align" th:text ="${tradingPL.particulars}">Acc Head Name</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${tradingPL.debit}">Debit</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${tradingPL.credit}">Credit</td>
+               		 <td th:id="${tradingPL.level}" th:text ="${tradingPL.particulars}" th:attrappend="isHeader=${tradingPL.header}">Acc Head Name</td>
+               		 <td id="right_align" th:text="${tradingPL.debit}" th:attrappend="isHeader=${tradingPL.header}">Debit</td>
+               		 <td id="right_align" th:text="${tradingPL.credit}" th:attrappend="isHeader=${tradingPL.header}">Credit</td>
                		</tr>
             </tbody>
         </table>
