--- a/src/main/resources/templates/BalanceSheet.html
+++ b/src/main/resources/templates/BalanceSheet.html
@@ -29,9 +29,9 @@
             </thead>
             <tbody>
                		<tr th:each="balSheet: ${listBalSheet}">
-               		 <td id="left_align" th:text ="${balSheet.particulars}">Acc Head Name</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${balSheet.debit}">Debit</td>
-               		 <td id="right_align" style="color:darkgreen" th:text="${balSheet.credit}">Credit</td>
+               		 <td th:id="${balSheet.level1}" th:text ="${balSheet.particulars}" th:attrappend="isHeader=${balSheet.header}">Acc Head Name</td>
+               		 <td id="right_align" style="color:darkgreen" th:text="${balSheet.debit}" th:attrappend="isHeader=${balSheet.header}">Debit</td>
+               		 <td id="right_align" style="color:darkgreen" th:text="${balSheet.credit}" th:attrappend="isHeader=${balSheet.header}">Credit</td>
                		</tr>
             </tbody>
         </table>
